Fix compilation errors on Solaris for good by using a different function that does the exact same thing but has a different name, except this time the interface is defined properly.

Or in other words s/madvise/posix_madvise/

Configure checks have also been updated.  Not backporting to 4.2, but will be
in KDE 4.3.

BUG:195262

svn path=/trunk/KDE/kdelibs/; revision=979086